--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,8 @@
 
     --top-notif-background-color: rgb(100, 100, 100);
     --top-notif-color: rgb(250, 250, 250);
+
+    --font-size: 12pt;
 }
 
 /* html elements */
@@ -33,6 +35,7 @@ body {
 body {
     box-sizing: border-box;
     font-family: sans-serif;
+    font-size: var(--font-size);
 
     background-color: var(--background-color);
     color: var(--color);
@@ -78,10 +81,12 @@ input {
     padding: 0.5em;
 
     /* fix text being slightly misaligned */
-    padding-top: calc(0.5em + 2px);
+    padding-top: calc(0.5em + 0.2em);
 
     background-color: var(--field-bg-color);
     color: var(--field-color);
+
+    font-size: var(--font-size);
 
     border-style: solid;
     border-width: 0;
@@ -99,6 +104,26 @@ input:disabled {
 input:focus {
     outline: none;
     border-bottom-color: var(--field-border-color-focus);
+}
+
+button {
+    display: block;
+    box-sizing: border-box;
+
+    padding: 0.7em;
+    padding-top: calc(0.7em + 2px);
+    margin: 0;
+
+    background-color: var(--field-bg-color);
+    color: var(--field-color);
+
+    font-size: var(--font-size);
+
+    border: none;
+}
+
+label {
+    user-select: none;
 }
 
 
@@ -151,32 +176,41 @@ input:focus {
     flex-shrink: 1;
 }
 
-/* collapsible lib */
-.collapsible {
-    padding-top: 0.25em;
-    padding-bottom: 0.25em;
-}
-
-.collapsible:before {
-    content: '\002b';
-    float: left;
-
-    font-weight: bold;
-
-    margin-right: 0.5em;
-}
-
-.collapsible.active:before {
-    content: '\2212';
-}
-
-.collapsible+.content {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-}
-
 /* app styles */
+input[type="radio"].switch-radio {
+    display: none;
+}
+
+input[type="radio"].switch-radio+label {
+    display: block;
+    box-sizing: border-box;
+
+    padding: 0.7em;
+    padding-top: calc(0.7em + 2px);
+    margin: 0;
+
+    background-color: var(--field-bg-color);
+    color: var(--field-color);
+
+    font-size: var(--font-size);
+    text-align: center;
+
+    border-style: solid;
+    border-width: 0;
+    border-bottom-width: 4px;
+    border-color: var(--field-border-color);
+
+    transition: border-color 0.1s ease-out;
+}
+
+input[type="radio"].switch-radio:checked+label {
+    border-bottom-color: var(--field-border-color-focus);
+}
+
+label.data-row {
+    margin-bottom: 0.25em;
+}
+
 .top-notif {
     -webkit-user-select: none;
     user-select: none;
