--- a/styles/index.css
+++ b/styles/index.css
@@ -1,299 +1,19 @@
-@import "./expandable.css";
-
-:root {
-    --background-color: rgb(60, 60, 60);
-    --color: rgb(250, 250, 250);
-
-    --field-border-color: rgb(120, 120, 120);
-    --field-bg-color: rgb(100, 100, 100);
-    --field-color: rgb(250, 250, 250);
-
-    --field-border-color-focus: aquamarine;
-
-    --field-border-color-disabled: rgb(100, 100, 100);
-    --field-bg-color-disabled: rgb(80, 80, 80);
-    --field-color-disabled: rgb(250, 250, 250);
-
-    --hour-bubble-bg-color-active: rgb(30, 30, 30);
-
-    --top-notif-background-color: rgb(100, 100, 100);
-    --top-notif-color: rgb(250, 250, 250);
-
-    --font-size: 12pt;
-}
-
-/* html elements */
-html,
-body {
-    width: 100%;
-    height: 100%;
-
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    box-sizing: border-box;
-    font-family: sans-serif;
-    font-size: var(--font-size);
-
-    background-color: var(--background-color);
-    color: var(--color);
-}
-
-body[data-app-theme="0"] {
-    --background-color: rgb(255, 255, 255);
-    --color: rgb(0, 0, 0);
-
-    --field-border-color: rgb(180, 180, 180);
-    --field-bg-color: rgb(240, 240, 240);
-    --field-color: rgb(0, 0, 0);
-
-    --field-border-color-focus: aquamarine;
-
-    --field-border-color-disabled: rgb(180, 180, 180);
-    --field-bg-color-disabled: rgb(220, 220, 220);
-    --field-color-disabled: rgb(0, 0, 0);
-
-    --hour-bubble-bg-color-active: rgb(210, 210, 210);
-
-    --top-notif-background-color: rgb(240, 240, 240);
-    --top-notif-color: rgb(0, 0, 0);
-}
-
-@media screen and (min-width: 500px) {
-    body {
-        display: flex;
-        flex-direction: column;
-
-        justify-content: flex-start;
-        align-items: center;
-    }
-}
-
-input {
-    display: block;
-    box-sizing: border-box;
-
-    width: 0;
-
-    margin: 0;
-    padding: 0.5em;
-
-    /* fix text being slightly misaligned */
-    padding-top: calc(0.5em + 0.2em);
-
-    background-color: var(--field-bg-color);
-    color: var(--field-color);
-
-    font-size: var(--font-size);
-
-    border-style: solid;
-    border-width: 0;
-    border-bottom-width: 4px;
-    border-color: var(--field-border-color);
-
-    transition: border-color 0.1s ease-out;
-}
-
-input:disabled {
-    background-color: var(--field-bg-color-disabled);
-    border-color: var(--field-border-color-disabled);
-}
-
-input:focus {
-    outline: none;
-    border-bottom-color: var(--field-border-color-focus);
-}
-
-button {
-    display: block;
-    box-sizing: border-box;
-
-    padding: 0.7em;
-    padding-top: calc(0.7em + 2px);
-    margin: 0;
-
-    background-color: var(--field-bg-color);
-    color: var(--field-color);
-
-    font-size: var(--font-size);
-
-    border: none;
-}
-
-label {
-    user-select: none;
-}
-
-
-/* flex lib */
-.flex-col {
-    display: flex;
-    flex-direction: column;
-
-    justify-content: flex-start;
-    align-items: stretch;
-}
-
-.flex-col.centered {
-    justify-content: center;
-    align-items: stretch;
-}
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.flex-auto-gap {
-    gap: 1em;
-}
-
-.flex-row.centered {
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-half {
-    flex-basis: 50%;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
-.flex-q {
-    flex-basis: 25%;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
-.flex-fill {
-    flex-basis: 100%;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
-/* app styles */
-input[type="radio"].switch-radio {
-    display: none;
-}
-
-input[type="radio"].switch-radio+label {
-    display: block;
-    box-sizing: border-box;
-
-    padding: 0.7em;
-    padding-top: calc(0.7em + 2px);
-    margin: 0;
-
-    background-color: var(--field-bg-color);
-    color: var(--field-color);
-
-    font-size: var(--font-size);
-    text-align: center;
-
-    border-style: solid;
-    border-width: 0;
-    border-bottom-width: 4px;
-    border-color: var(--field-border-color);
-
-    transition: border-color 0.1s ease-out;
-}
-
-input[type="radio"].switch-radio:checked+label {
-    border-bottom-color: var(--field-border-color-focus);
-}
-
-label.data-row {
-    margin-bottom: 0.25em;
-}
-
-.top-notif {
-    -webkit-user-select: none;
-    user-select: none;
-
-    box-sizing: border-box;
-    padding: 0.5em;
-
-    background-color: var(--top-notif-background-color);
-    color: var(--top-notif-color);
-
-    text-align: center;
-}
-
-.app-titlebar {
-    -webkit-user-select: none;
-    user-select: none;
-
-    margin-bottom: 1em;
-}
-
-.app-title {
-    margin-top: 0.5em;
-
-    text-align: center;
-    font-size: 1.4em;
-}
-
-.shift {
-    text-align: center;
-}
-
-.app-container {
-    padding-top: 1em;
-    padding-bottom: 5em;
-
-    margin-left: 1em;
-    margin-right: 1em;
-}
-
-@media screen and (min-width: 500px) {
-    .app-container {
-        width: 500px;
-    }
-}
-
-.data-row {
-    margin-top: 1em;
-}
-
-.hour-bubbles {
-    margin-top: 1em;
-}
-
-.hour-bubble {
-    -webkit-user-select: none;
-    user-select: none;
-
-    padding: 0.5em;
-
-    width: 1.1em;
-    height: 1.1em;
-    line-height: 1;
-
-    background-color: var(--field-bg-color);
-    color: var(--field-color);
-
-    border: 1px solid var(--field-border-color);
-    border-color: var(--field-border-color);
-
-    border-radius: 50%;
-
-    display: flex;
-    flex-direction: column;
-
-    justify-content: center;
-    align-items: center;
-}
-
-.hour-bubble:not(:first-child) {
-    margin-left: 1em;
-}
-
-.hour-bubble.of-this-shift {
-    background-color: var(--hour-bubble-bg-color-active);
-    color: var(--field-color);
-}
+@import "/tablica-odlewnia/styles/flex.css";
+
+@import "/tablica-odlewnia/styles/themes/theme.css";
+@import "/tablica-odlewnia/styles/themes/dark.css";
+@import "/tablica-odlewnia/styles/themes/blue.css";
+@import "/tablica-odlewnia/styles/themes/dev.css";
+/* @import "/tablica-odlewnia/styles/themes/light.css"; */
+/* @import "/tablica-odlewnia/styles/themes/green.css"; */
+
+@import "/tablica-odlewnia/styles/elements/body.css";
+@import "/tablica-odlewnia/styles/elements/button.css";
+@import "/tablica-odlewnia/styles/elements/fieldset.css";
+@import "/tablica-odlewnia/styles/elements/form.css";
+@import "/tablica-odlewnia/styles/elements/hr.css";
+@import "/tablica-odlewnia/styles/elements/input.css";
+@import "/tablica-odlewnia/styles/elements/legend.css";
+@import "/tablica-odlewnia/styles/elements/radio.css";
+@import "/tablica-odlewnia/styles/elements/footer.css";
+@import "/tablica-odlewnia/styles/elements/a.css";
