--- a/styles/themes/light.css
+++ b/styles/themes/light.css
@@ -1,4 +1,4 @@
-body[data-app-theme="0"] {
+body[data-app-theme="light"] {
     --color-1: rgb(250, 250, 250);
     --color-2: rgb(220, 220, 220);
     --color-3: rgb(230, 230, 230);
