new theme selector & updated themes + theme selector now uses a popup instead of a dropdown + new coffee theme + small theme fixes

--- a/styles/flex.css
+++ b/styles/flex.css
@@ -40,6 +40,10 @@
     justify-content: flex-end;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 .align-start {
     align-items: flex-start;
 }
