--- a/styles/index.css
+++ b/styles/index.css
@@ -12,3 +12,5 @@
 @import "/tablica-odlewnia/styles/elements/radio.css";
 @import "/tablica-odlewnia/styles/elements/footer.css";
 @import "/tablica-odlewnia/styles/elements/a.css";
+
+@import "/tablica-odlewnia/styles/class-elements/grid-table.css";
