--- a/styles/elements/input.css
+++ b/styles/elements/input.css
@@ -21,13 +21,12 @@ input {
     text-align: center;
 
     outline: none;
-    border: none;
-    border-style: solid;
-    border-width: 0;
-    border-bottom-width: 4px;
+    border: 1px solid var(--field-border-color);
     border-color: var(--field-border-color);
 
-    transition: border-color 0.1s ease-out;
+    border-radius: 15px;
+
+    transition: border-color 0.1s ease-out, border-radius 0.1s ease-out;
 }
 
 input::placeholder {
@@ -51,4 +50,36 @@ input:focus {
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     appearance: none;
+}
+
+input.left {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+input.right {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+input.bottom {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+input.top {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+input.middle {
+    border-radius: 0px;
+}
+
+input.left.join-to-bottom {
+    border-bottom-left-radius: 0px;
+}
+
+input.right.join-to-bottom {
+    border-bottom-right-radius: 0px;
 }
