--- a/styles/elements/radio.css
+++ b/styles/elements/radio.css
@@ -6,31 +6,45 @@ input[type="radio"]+label {
     -webkit-user-select: none;
     user-select: none;
 
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+
     display: block;
     box-sizing: border-box;
 
-    margin: 0;
+    width: 0;
 
+    margin: 0;
     padding: 0.5em;
     padding-top: 0.7em;
-    padding-bottom: calc(0.5em + 2px);
 
     line-height: 1;
 
-    background-color: var(--field-bg-color);
+    background-color: var(--field-bg-color-disabled);
     color: var(--field-color);
 
     font-size: var(--font-size);
     text-align: center;
 
-    border-style: solid;
-    border-width: 0;
-    border-bottom-width: 4px;
+    outline: none;
+    border: 1px solid var(--field-border-color);
     border-color: var(--field-border-color);
+    border-radius: 15px;
 
-    transition: border-color 0.1s ease-out;
+    transition: border-color 0.1s ease-out, border-radius 0.1s ease-out;
+}
+
+input[type="radio"]+label.join-right {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+input[type="radio"]+label.join-left {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 input[type="radio"]:checked+label {
-    border-bottom-color: var(--field-border-color-focus);
+    background-color: var(--field-bg-color);
 }
