--- a/styles/themes/theme.css
+++ b/styles/themes/theme.css
@@ -1,10 +1,11 @@
-@import "/tablica-odlewnia/styles/themes/dark.css";
+@import "/tablica-odlewnia/styles/themes/dark2.css";
 @import "/tablica-odlewnia/styles/themes/blue.css";
 @import "/tablica-odlewnia/styles/themes/light.css";
 @import "/tablica-odlewnia/styles/themes/coffee.css";
 
 body {
-    /* --color-1: rgb(0, 0, 0);
+    /*
+    --color-1: rgb(0, 0, 0);
     --color-2: rgb(0, 0, 0);
     --color-3: rgb(0, 0, 0);
     --color-4: rgb(0, 0, 0);
@@ -13,7 +14,8 @@ body {
     --text-color-dim: rgb(0, 0, 0);
 
     --accent-color: rgb(0, 0, 0);
-    --accent-color-dim: rgb(0, 0, 0); */
+    --accent-color-dim: rgb(0, 0, 0);
+    */
 
 
     --bg-color: var(--color-1);
